--- a/password manager/resources/public/index.html
+++ b/password manager/resources/public/index.html
@@ -10,3 +10,7 @@
     <div id="app"></div>
     <script src="/js/main.js"></script>
 <body>
+    <!--<div class="cursor-effect" id="cursor-effect"></div>
+    <script src="mouse-effect.js"></script>  <--just for fun -->
+</body>
+<footer></footer>
