--- a/password manager/resources/public/index.html
+++ b/password manager/resources/public/index.html
@@ -10,6 +10,8 @@
     <div id="app"></div>
     <script src="/js/main.js"></script>
 <body>
+    <div class="clipboard-copy" id="clipboard"></div>
+    <script src="clienthelpers.js"></script>
     <!--<div class="cursor-effect" id="cursor-effect"></div>
     <script src="mouse-effect.js"></script>  <--just for fun -->
 </body>
